--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import styles from '../styles/container.module.css';
+
+import Component from '../components/Component';
 ---
 
 <html lang="en">
@@ -9,7 +12,21 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
+
 	<body>
-		<h1>Astro</h1>
+		<div class:list={['box', styles.container]}>Astro</div>
+		<!-- <Component /> -->
+		<Component client:idle />
 	</body>
 </html>
+
+<style>
+	body {
+		display: flex;
+		gap: 8px;
+	}
+
+	.box {
+		background-color: cyan;
+	}
+</style>
